# db-erd-creator

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: TO.PROJ.2025.1ID21B.PRZEMYSŁAW.CEDRO.2.odt  TO.PROJ.2025.1ID21B.PRZEMYSŁAW.CEDRO.odt  components.puml  layer.drawio  usecases.puml
src/: AddTableDesignerTool.vue  App.vue  Connect.vue  DbTableColumnView.vue  DbTableRelationView.vue  DbTableView.vue  Designer.vue  DesignerToolExports.ts  Disconnect.vue  Home.vue  MoveDesignerTool.vue  NotFound.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/api/: tauri.ts
src/assets/: base.css  main.css
src/components/: AddTableDesignerTool.vue  DbTableColumnView.vue  DbTableRelationMarker.vue  DbTableRelationView.vue  DbTableView.vue  DesignChangeIndicator.vue  DesignerPane.vue  DesignerToolExports.ts  MoveDesignerTool.vue
src/composables/: useDesignerState.ts  useService.ts
src/dto/: DbDesignDto.ts  DbTableColumnDto.ts  DbTableColumnKeyTypeDto.ts  DbTableDto.ts  DbTableInheritanceKindDto.ts  DbTableRelationDto.ts  DbTableRelationKindDto.ts
src/model/: DbDataType.ts  DbDesign.ts  DbTable.ts  DbTableColumn.ts  DbTableColumnKeyType.ts  DbTableInheritanceKind.ts  DbTableRelation.ts  DbTableRelationKind.ts  DesignerState.ts  DesignerToolMode.ts  SupportedDbKind.ts
src/services/: DbDataTypeTemplateProviderService.ts  DesignDtoMapper.ts  DesignManagerService.ts  DesignMirProcessor.ts  DesignPersistenceService.ts  DesignSerializerService.ts  (+4 more)
testing/: docker-compose.yml
(+16 files in other folders)
