[package]
name = "db-erd-creator"
version = "0.1.0"
description = "Graphical database schema designer"
authors = ["SpontanCombust <cedro_p@o2.pl>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
odbc-api = "12.0.1"
anyhow = "1.0.97"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true # Optimize at the link stage to remove dead code and reduce binary size
opt-level = "s"  # Optimize for size.
